--- a/config.cw20_token.json
+++ b/config.cw20_token.json
@@ -18,10 +18,10 @@
         },
         "instantiateMsg":{ 
           "decimals": 6,
-          "initial_balances": [{ "address": "terra18yfx9skmexwxvpxal6wtc5unjvcc68xtgl0l56", "amount":"1000000000000" }],
-          "name": "Lemon Token", 
-          "symbol": "LMON",
-          "mint": { "minter": "terra18yfx9skmexwxvpxal6wtc5unjvcc68xtgl0l56", "cap":"1000000000000000" }
+          "initial_balances": [{ "address": "terra1ymandfjxallnq36yfj0u0g04z5n93kk93kpwen", "amount":"1000000000000" }],
+          "name": "DIOCAN", 
+          "symbol": "DIOCAN",
+          "mint": { "minter": "terra1ymandfjxallnq36yfj0u0g04z5n93kk93kpwen", "cap":"1000000000000000" }
       }
       }
     }
